# odoo-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  koyeb.yaml  pyproject.toml  railway.json  smithery.yaml
docs/.well-known/mcp/: server-card.json
spaces/: Dockerfile  README.md
src/odoo_crm_mcp/: __init__.py  client.py  server.py
src/odoo_crm_mcp/tools/: __init__.py  activities.py  analytics.py  contacts.py  leads.py  stages.py  tags.py  teams.py  users.py
tests/: test_client.py  test_server.py
