[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-crm-mcp"
version = "0.1.0"
description = "MCP server for Odoo CRM — AI-powered CRM management via Model Context Protocol"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Odoo CRM MCP Contributors" }]
keywords = ["odoo", "crm", "mcp", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[project.scripts]
odoo-crm-mcp = "odoo_crm_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/odoo-crm-mcp"
Repository = "https://github.com/yourusername/odoo-crm-mcp"
Issues = "https://github.com/yourusername/odoo-crm-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_crm_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
